Fix metrics-config view encapsulation and stream select badge vertical align

--- a/dash-if-reference-player/src/app/components/metrics-configuration/metrics-configuration.component.css
+++ b/dash-if-reference-player/src/app/components/metrics-configuration/metrics-configuration.component.css
@@ -50,13 +50,10 @@ td {
   white-space: nowrap;
   position: relative;
   top: -0.4em;
-  font-weight: 400;
 }
 
 .mValue {
   vertical-align: bottom;
   padding: 0.16em 0.4em !important;
 }
-.mat-simple-snackbar span {
-  color: white !important;
-}
+
