--- a/dash-if-reference-player/src/app/components/video-configuration/video-configuration.component.css
+++ b/dash-if-reference-player/src/app/components/video-configuration/video-configuration.component.css
@@ -27,9 +27,12 @@
   background: #888;
 }
 
-
 .vc-collapse > li {
   list-style-type: none;
+}
+
+.vc-collapse .badge {
+  vertical-align: text-bottom;
 }
 
 .vc-custom-dropdown-item {
