--- a/dash-if-reference-player/src/styles.css
+++ b/dash-if-reference-player/src/styles.css
@@ -30,6 +30,10 @@ h3 {
   font-weight: bold !important;
 }
 
+.badge {
+  font-weight: 500;
+}
+
 /**
  * Styles for Angular Material
  */
@@ -131,4 +135,8 @@ input {
 
 .mat-card {
   color: #707070;
+}
+
+.mat-simple-snackbar span {
+  color: white !important;
 }
